--- a/README
+++ b/README
@@ -1,8 +1,17 @@
-Wink
+#Wink
 
-This application uses OpenCV to implement face recognition and eye recognition.
+This application uses OpenCV to implement eye recognition to automatically detect winking.
 
-Since this application uses CMake for handling dependencies*, the steps to build and run this:
-	$> cmake .
-	$> make
-Then execute as usual. 
+###To run this project:
+	1. Remove CMakeCache.txt
+	2. Open CMakeLists.txt and properly add the dependency libraries and headers listed below. (I used environment variables to point to the root directories of the libraries)
+	3. Run the following commands:
+		$> cmake .
+		$> make
+	4. execute using:
+		$> ./wink1
+
+###Dependencies:
+	1. OpenCV 3.x
+	2. Boost Library
+	3. CMake
